# Batch-Translation-of-Skills

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Third-Party-Notices.md  batch-translation-report_20260428_221256.md  pyproject.toml  requirements.txt
batch_translator/: __init__.py  __main__.py  analyzer.py  config.py  core.py  exceptions.py  file_manager.py  languages.py  main.py  models.py  reporter.py  reviewer.py  utils.py  validator.py
batch_translator/services/: __init__.py  anthropic.py  base.py  factory.py  minimax.py  mock.py  openai.py
